[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/lil_guy.png" type="Texture" id=1]
[ext_resource path="res://Art/monochrome_tilemap.png" type="Texture" id=2]
[ext_resource path="res://Art/colored.png" type="Texture" id=3]
[ext_resource path="res://Player/PlayerBody.gd" type="Script" id=4]
[ext_resource path="res://Art/yehaw.png" type="Texture" id=5]
[ext_resource path="res://Art/Pain.ogg" type="AudioStream" id=6]
[ext_resource path="res://SceneCam.gd" type="Script" id=7]

[sub_resource type="ImageTexture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 6.875 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 629, 153, 16, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 8.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.25, 0.85 )

[node name="PlayerBody" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_mask = 6
script = ExtResource( 4 )

[node name="SceneCam" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.25
drag_margin_top = 0.5
drag_margin_right = 0.25
drag_margin_bottom = 0.3
script = ExtResource( 7 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
normal_map = SubResource( 2 )

[node name="Hat" type="Sprite" parent="PlayerSprite"]
position = Vector2( 0, -6.5 )
scale = Vector2( 1, 0.5625 )
texture = ExtResource( 5 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.125 )
shape = SubResource( 3 )

[node name="Gun" type="Node2D" parent="."]

[node name="GunSprite" type="Sprite" parent="Gun"]
position = Vector2( 9, 0 )
scale = Vector2( 0.375, 0.3125 )
texture = SubResource( 4 )
normal_map = ExtResource( 2 )

[node name="FireDelay" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25

[node name="JumpGracetime" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="MidJump" type="Timer" parent="."]
process_mode = 0
wait_time = 0.06
one_shot = true

[node name="LongJump" type="Timer" parent="."]
process_mode = 0
wait_time = 0.09
one_shot = true

[node name="Stunned" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 5 )

[node name="walldetector (left)" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 2
collide_with_areas = true

[node name="walldetector (right)" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 2
collide_with_areas = true

[node name="OOF" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 6 )
collision_layer = 2
collision_mask = 2

[node name="FloorCollider" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4.76837e-07 )
shape = SubResource( 6 )

[node name="HPBase" type="ColorRect" parent="."]
visible = false
margin_left = -10.0
margin_top = -15.0
margin_right = 10.0
margin_bottom = -11.0
color = Color( 0.729412, 0, 0, 1 )

[node name="HPGreen" type="ColorRect" parent="HPBase"]
margin_right = 20.0
margin_bottom = 4.0
color = Color( 0.0862745, 0.643137, 0.00784314, 1 )

[node name="Fadetimer" type="Timer" parent="HPBase"]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="FireDelay" to="." method="_on_FireDelay_timeout"]
[connection signal="timeout" from="JumpGracetime" to="." method="_on_JumpGracetime_timeout"]
[connection signal="timeout" from="MidJump" to="." method="_on_MidJump_timeout"]
[connection signal="timeout" from="LongJump" to="." method="_on_LongJump_timeout"]
[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_Hitbox_area_shape_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="HPBase/Fadetimer" to="." method="_on_Fadetimer_timeout"]
